--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.16.1",
     "firebase": "^8.2.4",
     "firebase-admin": "^9.4.2",
     "next": "10.0.5",
